--- a/projects/project 3 try 2/app/src/main/AndroidManifest.xml
+++ b/projects/project 3 try 2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kinne.jack.jkp3v2">
 
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CloudVisionUtils"></activity>
+        <activity android:name=".CloudVisionUtils" />
+        <activity android:name=".Activity2"></activity>
     </application>
 
 </manifest>
