--- a/projects/project 3 try 2/app/src/main/AndroidManifest.xml
+++ b/projects/project 3 try 2/app/src/main/AndroidManifest.xml
@@ -5,10 +5,8 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +23,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".CloudVisionUtils" />
-        <activity android:name=".Activity2"></activity>
+        <activity android:name=".Activity2" />
+        <activity android:name=".trueResult" />
+        <activity android:name=".falseResult" />
+        <activity android:name=".aResult"></activity>
     </application>
 
 </manifest>
