--- a/projects/project 3 try 2/app/build.gradle
+++ b/projects/project 3 try 2/app/build.gradle
@@ -22,26 +22,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.firebase:firebase-storage:11.4.2'
-    implementation 'com.google.firebase:firebase-auth:11.4.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compileOnly 'com.google.android.things:androidthings:0.6-devpreview'
+    compile 'com.google.api-client:google-api-client-android:1.22.0' exclude module: 'httpclient'
+    compile 'com.google.http-client:google-http-client-gson:1.22.0' exclude module: 'httpclient'
 
-    implementation 'com.google.firebase:firebase-core:11.4.2'
-    implementation 'com.google.firebase:firebase-database:11.4.2'
-    implementation 'com.google.android.things.contrib:driver-button:0.3'
-    implementation 'com.google.apis:google-api-services-vision:v1-rev22-1.22.0'
-    implementation 'com.google.api-client:google-api-client-android:1.22.0' exclude module: 'httpclient'
-    implementation 'com.google.http-client:google-http-client-gson:1.22.0' exclude module: 'httpclient'
+    compile 'com.google.apis:google-api-services-vision:v1-rev22-1.22.0'
+
 }
-
-
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
